[package]
name = "alure"
description = "AluVM runtime environment"
version = "0.1.0"
authors = ["Dr Maxim Orlovsky <orlovsky@pandoracore.com>"]
edition = "2018"
license = "AGPL-2.0"
repository = "https://github.com/pandoracore/alure"
homepage = "https://aluvm.org"
keywords = ["virtual-machine", "emulator", "functional", "risc", "edge-computing"]
categories = ["no-std", "embedded", "compilers", "cryptography", "emulators"]
readme = "README.md"
exclude = [".github"]

[lib]
name = "alure"

[[bin]]
name = "alurex"
path = "src/main.rs"

[dependencies]
amplify = "3.7.1"
aluvm = { version = "0.4.0", git = "https://github.com/internet2-org/rust-aluvm" }
ed25519 = "1.1.1"