[package]
name = "alure"
description = "AluVM runtime environment"
version = "0.1.0"
authors = ["Dr Maxim Orlovsky <orlovsky@pandoracore.com>"]
edition = "2018"
license = "AGPL-2.0"
repository = "https://github.com/pandoracore/alure"
homepage = "https://aluvm.org"
keywords = ["virtual-machine", "emulator", "functional", "risc", "edge-computing"]
categories = ["no-std", "embedded", "compilers", "cryptography", "emulators"]
readme = "README.md"
exclude = [".github"]

[lib]
name = "alure"

[[bin]]
name = "alurex"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
amplify = "3.7.1"
aluvm = { version = "0.4.0", git = "https://github.com/internet2-org/rust-aluvm" }
ed25519 = "1.1.1"
clap = { version = "3.0.0-beta.2", optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1", optional = true }
serde_yaml = { version = "0.8", optional = true }
toml = { version = "0.5", optional = true }
chrono = { version = "0.4", optional = true }

[features]
default = []
cli = ["clap", "chrono", "serde", "serde_yaml", "serde_json", "toml"]
